--- a/tema1.html
+++ b/tema1.html
@@ -205,17 +205,21 @@
                     <!-- inicia video  -->
                     <figure>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/R9WF8ZtMbrA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <figcaption>¡No lo hagan!</figcaption>
+                        <figcaption>video de youtube </figcaption>
                     </figure>
                     <!-- termina Video-->
 
                     <!-- inician párrafos adicionales -->
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis vitae odio, impedit laboriosam doloremque, perspiciatis id illo tenetur sequi aspernatur corrupti aperiam. Eius, nesciunt asperiores mollitia libero molestiae assumenda voluptas quae consequatur. Dolorem
-                        numquam non, expedita molestias deleniti unde voluptatibus suscipit, optio at amet autem inventore necessitatibus. Minus deserunt aliquam pariatur voluptatum vitae, delectus accusamus distinctio, nostrum consequuntur aperiam sequi? Minus alias impedit quasi dolor animi
-                        ratione quas accusamus facilis libero ex quisquam, dolores sit quaerat ut enim, velit rem laudantium minima. Harum ex totam et tempora officia quas veniam dolore consequatur error? Nisi adipisci ullam fuga sequi libero nobis?</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel exercitationem cupiditate in est sed cum. Quis quibusdam porro tenetur similique dicta quod, reiciendis voluptatibus iure libero voluptate laborum ipsa praesentium nulla! Vel quos accusamus pariatur, nulla,
-                        perspiciatis nisi vitae fuga numquam dolores harum voluptate. Minus culpa ipsa obcaecati numquam architecto aperiam cumque atque, eaque, perspiciatis nesciunt reiciendis voluptate beatae magnam accusamus vitae officia. Quo, tempora ea modi incidunt dicta nulla unde soluta
-                        vero ab voluptates aut aliquid optio quod impedit deleniti delectus praesentium quis repellendus possimus. Minima asperiores molestias incidunt cum inventore magni, consequatur natus? Nihil odio quod recusandae quas?</p>
+                    <p>
+                        los caballos de fuerza en el mundo automotor es una medida que se utliza para medir la potencia de un
+                        automovil, cada caballo de fuerza equivale a un aproximado de 76 kilogramos de arrastre, tambien estan
+                        las libras pie de torque (LB_FT) qye complementa los caballos de fuerza del automovil 
+                    </p>
+                    <p>
+                        el tamaño de los motores se mide en centimetros cubicos, si un motor mide 440 centimetros cubicos entonces
+                        se anunciara que el motor en de 4.4 litros esto por que es una medida de tamaño para que toda la gente le 
+                        entienda
+                    </p>
                     <!-- Terminan párrafos adicionales -->
                 </div>
                 <!-- Termina contenido del artículo -->
